QA_Ipreo/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>for data migration from BDV</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Asset_Bundle__c</fullName>
        <description>This field is used to concatenate assets of the contact.</description>
        <label>Asset Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDEmail__c</fullName>
        <label>BDEmail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDFax__c</fullName>
        <label>BDFax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDPhone__c</fullName>
        <label>BDPhone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Vision_ID__c</fullName>
        <externalId>true</externalId>
        <label>BD Vision ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Churn_Reason__c</fullName>
        <formula>TEXT(Account.Churn_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Churn Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <formula>Account.Churn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Subscription_Status__c</fullName>
        <description>for data migration from BDV</description>
        <label>Contact Subscription Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_IR_AM_CAB_PAC_Member__c</fullName>
        <description>for data migration from BDV</description>
        <label>Corp IR-AM-CAB/PAC Member</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Run_Name__c</fullName>
        <label>DM Run Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtdomain_ID__c</fullName>
        <description>Identifier from the Debtdomain system</description>
        <externalId>true</externalId>
        <label>Debtdomain ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR/Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goes_By__c</fullName>
        <description>for data migration from BDV</description>
        <label>Goes By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDDataUpdate__c</fullName>
        <description>Describes last company changes of contact</description>
        <label>BD Data Update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDWarehouseId__c</fullName>
        <externalId>true</externalId>
        <label>BD Warehouse Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BD_SyncHistory__c</fullName>
        <description>Contains values (or hashes) for all fields that have ever been synchronized.</description>
        <label>BD Synchronization History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__bd_lastsynctime__c</fullName>
        <description>Describes date and time when the last synchronization was</description>
        <label>BD Last synchronization time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Vice President (AVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Administrative Officer (CA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Compliance Officer (CCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer (CEO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer (CFO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Officer (CIO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer (COO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Technology Officer (CTO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Director (ED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Vice President (EVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Score__c</fullName>
        <label>Marketo Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Assets__c</fullName>
        <label>No. of Active Assets</label>
        <summaryFilterItems>
            <field>User_Asset__c.Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>User_Asset__c.User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Sponsored_Assets__c</fullName>
        <label>No of Active Sponsored Assets</label>
        <summaryFilterItems>
            <field>User_Asset__c.Is_Sponsored_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>User_Asset__c.Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>User_Asset__c.User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sponsored_User_Status__c</fullName>
        <formula>if(  No_of_Active_Sponsored_Assets__c  = 0, &apos;Inactive&apos;, &apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsored User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <inlineHelpText>Set by system:  if Contact has an active User Asset (Contact is associated with an asset with an active subscription) then User Status is &apos;Active&apos;.  Otherwise, &apos;Inactive&apos;.</inlineHelpText>
        <label>User Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>APAC_BDC_Citi_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>Michelle Cheung - Michelle Citi Master List,Lilyan Li - Lilyan - Citi Master Li</value>
        </filters>
        <label>APAC BDC Citi Users</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_I_Own</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Contacts I Own</label>
    </listViews>
    <listViews>
        <fullName>Contacts_with_DDID</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Debtdomain_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Debtdomain_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contacts with Debtdomain ID</label>
        <sharedTo>
            <roleAndSubordinates>GMG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emergency_List_Global_BNY1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>Andrew Bjorkman - Emergency List - Global BNY</value>
        </filters>
        <label>Emergency List - Global BNY</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_Account</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( AccountId ) 
&amp;&amp; NOT(ISNEW()) 
&amp;&amp; $Profile.Name != &apos;Operations User&apos; 
&amp;&amp; $Profile.Name != &apos;System Administrator&apos; 
&amp;&amp; NOT($Profile.Name = &apos;Service User&apos; &amp;&amp; ISPICKVAL(User_Status__c, &apos;Inactive&apos;) )</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You can not change the account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_MailingCountry</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( MailingCountry ) 
&amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>Country required when save a contact.</errorMessage>
    </validationRules>
</CustomObject>